# smoltbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml  helm.yml
api/: openapi.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker.ts  wrangler.toml
api/migrations/: 003_resolutions.sql
api/src/: index.ts
api/src/__tests__/: aip-integrity.test.ts  certificate.test.ts  chain.test.ts  merkle.test.ts  proving.test.ts  signing.test.ts
api/src/admin/: handlers.ts
api/src/analyze/: certificate.ts  chain.ts  handlers.ts  proving.ts  signing.ts  types.ts  verification-handlers.ts
api/src/billing/: api-keys.ts  email.ts  feature-gate.ts  handlers.ts  hubspot.ts  sequences.ts  slack.ts  stripe-provider.ts  supabase-email-templates.html  types.ts  usage-alerts.ts  webhook-handler.ts
api/src/deployments/: handlers.ts  types.ts
api/src/licensing/: expiry-check.ts  handlers.ts  jwt.ts  types.ts
architecture/: ARCHITECTURE.md  PLAN.md  SMOLTBOT_AAP_ARCHITECTURE_V2.md  SMOLTBOT_IMPLEMENTATION_PLAN_V1.md  SMOLTBOT_IMPLEMENTATION_PLAN_V2.md  SMOLTBOT_IMPLEMENTATION_PLAN_V3.md  SMOLTBOT_IMPLEMENTATION_PLAN_V4.md  SMOLTBOT_PHASE_2_TEST_DEPLOYMENT_PLAN.md  TECHNICAL_ARCHITECTURE.md  TEST_PLAN.md
cli/: README.md  package-lock.json  package.json
cli/src/: index.ts
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
database/: policies.sql  schema.sql  setup.md
database/migrations/: 002_aip_integrity.sql  003_aip_phase4.sql  004_admin_usage.sql  005_checkpoint_reevaluation.sql  006_enforcement_nudges.sql  007_fix_aip_integrity_rpc.sql
deploy/: ARCHITECTURE.md  CONFIGURATION.md  README.md  TROUBLESHOOTING.md  UPGRADE.md  openclaw.json  start.sh
deploy/docker/: .env.example  Dockerfile.gateway  Dockerfile.migrate  README.md  docker-compose.yml
deploy/helm/: README.md
deploy/migrations/: 001_add_nudge_strategy.sql
deploy/runtime/: package-lock.json  package.json  tsconfig.json
deploy/scripts/: migrate.sh
gateway/: package-lock.json  package.json  tsconfig.json  wrangler.toml
gateway/src/: index.ts  sse-parser.ts
hunter/: Dockerfile  package-lock.json  package.json  tsconfig.json
hunter/src/: config.ts  index.ts
monitor/: package-lock.json  package.json  wrangler.toml
monitor/src/: index.ts
observer/: package-lock.json  package.json  tsconfig.json  wrangler.toml
observer/src/: card-merge.ts  index.ts
plugin/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugin/src/: api.ts  config.ts  index.ts  trace.ts  types.ts
prover/: Dockerfile  fly.toml
proxy/: package.json  wrangler.toml
proxy/src/: index.ts
zkvm/: Cargo.toml
zkvm/benchmarks/: proving-benchmarks.txt  typescript-benchmarks.json
zkvm/core/: Cargo.toml
zkvm/core/src/: hash.rs  lib.rs  types.rs  verdict.rs
zkvm/host/: Cargo.toml
zkvm/host/benches/: proving.rs
zkvm/host/src/: lib.rs  main.rs  prover.rs  server.rs
zkvm/methods/: Cargo.toml
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/methods/src/: lib.rs
zkvm/tests/fixtures/: boundary_deception.json  boundary_injection.json  clear.json  review_needed.json
zkvm/wasm-verifier/: Cargo.toml
zkvm/wasm-verifier/src/: lib.rs
(+137 files in other folders)
