[workspace]
members = ["core", "methods/guest", "methods", "host", "wasm-verifier"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
risc0-zkvm = { version = "1.2", default-features = false }
risc0-build = { version = "1.2" }
bincode = "1.3"
anyhow = "1.0"

[profile.release]
opt-level = "s"
lto = true
