[package]
name = "aip-zkvm-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "sha2/std", "hex/std"]
