[package]
name = "aip-zkvm-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aip-prover"
path = "src/main.rs"

[dependencies]
aip-zkvm-core = { path = "../core" }
aip-zkvm-methods = { path = "../methods" }
risc0-zkvm = { workspace = true, features = ["client", "prove"] }
bincode = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { version = "1.0" }
hex = { version = "0.4" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[features]
bench-proving = []  # Enable to compile the proving benchmarks (requires RISC Zero toolchain)

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "proving"
harness = false
required-features = ["bench-proving"]
