[package]
name = "risc0-wasm-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# default-features = false avoids the `prove` feature, which pulls in native
# C++ code via `risc0-sys`.  Verification-only path is pure Rust.
risc0-zkvm = { workspace = true }
bincode = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
# Required: rand_core (transitive via risc0-zkp) needs getrandom, which
# requires the `js` feature on wasm32-unknown-unknown targets.
getrandom = { version = "0.2", features = ["js"] }
