[package]
name = "aip-zkvm-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
aip-zkvm-core = { path = "../../core", default-features = false }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
